[package]
name = "tests"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["author"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.27", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "harness"
path = "tests/harness.rs"
